--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "^13.4.4",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^10.12.16",
     "next": "13.4.3",
     "nodemailer": "^6.9.5",
